syntax = "proto3";

import "goMicroservice/auth/proto/auth.proto";
import "goMicroservice/db/proto/db.proto";

service App {
    rpc GetTodoList (AuthRequest) returns (DbResponse) {}
}